fixing null pointer exception on import (#6)
* fixed null pointer exception in import.